Bug 423474 - Selections not retained when switching between sheets
Summary: Selections not retained when switching between sheets
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-25 08:03 UTC by Dag Andersen
Modified: 2020-11-13 03:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2020-06-25 08:03:08 UTC
SUMMARY
When marker is to the bottomright of the anchor, it fails.
Marker <= anchor is ok.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2020-06-25 08:19:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/calligra/-/merge_requests/3
Comment 2 Justin Zobel 2020-11-13 03:10:21 UTC
Merge request has been merged.

If this issue persists please reopen this bug report.