Sheets: Fix Bug 423474 - Selections not retained when switching between sheets

BUG: 423474